--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,6 +24,7 @@ requirements:
     - owlready2
     - pandas
     - pint
+    - setuptools
   run:
     - python >={{ python_min }},<3.13
     - numpy >=1.26.3,<1.27.0
